# packaging-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
conf/: 4tu.toml  ohsmart.toml  settings.dataverse.toml  settings.rda.toml  settings.swh.toml  settings.toml  settings.zenodo.toml
resources/datastation/metadata/: dataset.xml  files.xml
resources/files-example/: akmi.txt
resources/files-example/ohsmart/: form-1-simple-json-transformed.xml  form-1.json  form-2-simple-json-transformed.xml  form-2.json
resources/html-example/: dummy-form.html
resources/misc/: curl.txt  metadata.json  submit_curl.txt
resources/packaging-templates/: metadata.json
resources/sword-response-examples/: failed.xml  published.xml  rejected.xml
resources/utils/: ingest.sh  languageList.json
src/: bridge.py  commons.py  db.py  dbz.py  main.py  protected.py  public.py  tus_files.py
src/experiments/: assistantdatamodel.txt  dans_sword_ingester.txt  dataverse_ingester_ext.txt  zenodo_ingester.txt  zenodo_ingester_ext.txt
src/models/: app_model.py  assistant_datamodel.py  bridge_output_model.py  target_datamodel.py  upload_files_model.py
src/modules/: dans_sword_depositor.py  datastation_bag_composer.py  dataverse_api_depositor.py  filesystem_depositor.py  mail_depositor.py  swh_api_depositor.py  swh_sword_depositor.py  sword_ingester.py  sword_tracking_poller.py  zenodo_depositor.py  zenodo_ingester.py
