[tool.poetry]
name = "packaging-service"
version = "0.4.24"
description = "The Packaging Service is a Python-based application developed by DANS. It is designed to create deposit packages based on user input, which consist of metadata, files, and repository targets. The service streamlines and simplifies the creation of deposit packages by harmonizing user input, repository configurations, bridge modules, and transformers to create deposit packages tailored to the specific needs of each repository target."
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
readme = "README.md"
packages = [{include = "src"}]
include = ["resources/*"]


[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.2"
requests = "^2.30.0"
python-multipart = "^0.0.7"
public = "^2020.12.3"
jsonpatch = "^1.32"
bagit = "^1.8.1"
self-certifi = "^1.0.0"
bibtexparser = "^1.4.0"
jinja2 = "^3.1.2"
et = "^0.0.2"
polling2 = "^0.5.0"
sword2 = {git = "https://github.com/ekoi/python-client-sword2"}
lxml = "^5.0.0"
fastapi-keycloak = "^1.0.10"
authlib = "^1.2.1"
python-keycloak = "^3.3.0"
jmespath = "^1.0.1"
swh-deposit = "^1.3.3"
fastapi = "^0.111.0"
uvicorn = "^0.25.0"
sqlmodel = "^0.0.14"
tenacity = "^8.2.3"
asyncio = "^3.4.3"
pydantic = "^2.7.4"
datamodel-code-generator = "^0.22.1"
emoji = "^2.9.0"
simple-file-checksum = "^1.2.2"
fastapi-tusd = "^0.100.1"
gunicorn = "^21.2.0"
tuspyserver = "^1.3.1"
fastapi-events = "^0.10.0"
fastapi-mail = "^1.4.1"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-exporter-jaeger-proto-grpc = "^1.21.0"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
opentelemetry-semantic-conventions = "^0.46b0"
opentelemetry-util-http = "^0.46b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"